<resources>
    <string name="app_name">2D Boxes</string>
    <string name="user_name">Enter Name</string>
    <string name="action_update">Update</string>
    <string name="mute_sound">Mute</string>
    <string name="unmute_sound">UnMute  </string>
    <string name="sound">Sound</string>
    <string name="new_game">new game</string>
    <string name="resume_game">resume</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="update">Update</string>
    <string name="grid_size">Grid</string>
    <string name="grid_6_6">6*6</string>
    <string name="grid_8_8">8*8</string>
    <string name="grid_10_10">10*10</string>
    <string name="grid_12_12">12*12  </string>
    <string name="pre_fill">Pre Fill</string>
    <string name="pre_fill_1_2">75%</string>
    <string name="pre_fill_1_3">50%</string>
    <string name="pre_fill_1_4">25%</string>
    <string name="pre_fill_none">Blank</string>
    <string name="game_mode">Level</string>
    <string name="mode_normal">Normal</string>
    <string name="mode_complex">Complex</string>
    <string name="mode_advanced">Advanced</string>
    <string name="win_details">Wins </string>
    <string name="Complex">Complex : 0</string>
    <string name="Advanced">Advanced : 0</string>
    <string name="admobAppId">ca-app-pub-3016807191664626~6886658593</string>
    <string name="bannerAdMainActivity">ca-app-pub-3016807191664626/9840124990</string>
    <string name="intterstitialAdMainActivity">ca-app-pub-3016807191664626/6018700995</string>
</resources>
