<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient_rectangle_main_bg"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:background="@drawable/play_button_shape"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="1" />
    <Button android:id="@+id/resumeGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_game"
        android:background="@drawable/button_shape_disabled"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/play_button_shape"
        android:text="@string/settings"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:layout_marginBottom="25dp" />
    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/play_button_shape"
        android:text="@string/help"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:layout_weight="1"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="60dp" />
</LinearLayout>